--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: "Update Nerd Fonts"
 on:
   workflow_dispatch:
   schedule:
-    # 1st and 15th at 12:00 AM
-    - cron: "0 0 1,15 * *"
+    # “At 00:00 on Monday.”
+    - cron: "0 0 * * 1"
 
 permissions:
   contents: write
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Git Bot
         run: |
